--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "ws": "node ./src/server/websocket.js"
   },
   "private": true,
   "dependencies": {
@@ -20,8 +21,10 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@types/ws": "^8.5.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "ws": "^8.18.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
